# Usecase-3

./: .dockerignore  .gitignore  CONTEXT.md  Canned_Responses_Templatefull.xlsx  DATABASE_SCHEMA.md  DETAILS.md  DOCUMENT.md  Dockerfile  Email_Composer_Automation_TDD.docx  deploy-single.sh  deploy.sh
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: chroma.py  config.py  database.py  llm.py  models.py  prompts.py  rag.py  vector_store.py
backend/app/audit/: device.py  emitter.py  event_queue.py  geo.py  security.py
backend/app/auth/: casbin_policy.csv  enforcer.py  jwt.py  middleware.py
backend/app/routes/: analytics.py  auth.py  generate.py  history.py  users.py
backend/data/chroma/: chroma.sqlite3
backend/data/chroma_data/: chroma.sqlite3
frontend/: .dockerignore  Dockerfile  angular.json  cloudbuild.yaml  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend-angular/: .gitignore  Dockerfile  angular.json  cloudbuild.yaml  package-lock.json  package.json  proxy.conf.json
frontend-angular/src/: index.html
frontend-angular/src/app/: app.component.ts  app.routes.ts
frontend-angular/src/styles/: global.css  tokens.css
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.html
frontend/src/app/: app.config.ts
frontend/src/components/ActionBar/: ActionBar.tsx
frontend/src/components/GenerateView/: GenerateView.css  (+1 more)
frontend/src/context/: AppContext.tsx  AuthContext.tsx  IntroContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useHeartbeat.ts
frontend/src/services/: api.ts
frontend/src/styles/: global.css  tokens.css
frontend/src/types/: index.ts
(+190 files in other folders)
