[project]
name = "backend"
version = "0.1.0"
description = "Email Composer AI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "google-genai>=1.0.0",
    "openpyxl>=3.1.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-aiplatform>=1.60.0",
    "casbin>=1.36.0",
    "bcrypt>=4.0.0",
    "httpx>=0.28.0",
    "user-agents>=2.2.0",
    "PyJWT>=2.8.0",
]
